--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>GreysWiki</title>
-    <link rel="stylesheet" href="./styleteste.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
       <figure class="logo">
-        <img src="./Grey's_Anatomy_Logo.svg" width="150" alt="Logo" />
+        <img src="./Grey's_Anatomy_Logo.svg" width="150" alt="Logo"/>
       </figure>
     </header>
 
@@ -464,13 +464,13 @@ Heigl recebeu elogios da crítica por sua atuação como Izzie e recebeu inúmer
             </tr>
             <tr>
               <td>Temporadas</td>
-              <td>18</td>
+              <td>19</td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
               <th colspan="2">
-                <a href="https://pt.wikipedia.org/wiki/Portal:Animang%C3%A1" title="Portal Animangá">Informações</a>
+                <a href="https://pt.wikipedia.org/wiki/Grey%27s_Anatomy" title="Greys Anatomy">Informações</a>
               </th>
             </tr>
           </tfoot>
@@ -494,7 +494,7 @@ Heigl recebeu elogios da crítica por sua atuação como Izzie e recebeu inúmer
         <div class="container">
           <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
           LinkedIn:
-          <a href="https://www.linkedin.com/in/am%C3%A1bile-silva-413597170/" title="LinkedIn: https://www.linkedin.com/in/alice-hata/">https://www.linkedin.com/in/am%C3%A1bile-silva-413597170/</a>
+          <a href="https://www.linkedin.com/in/am%C3%A1bile-silva-413597170/" title="LinkedIn: https://www.linkedin.com/in/am%C3%A1bile-silva-413597170/">https://www.linkedin.com/in/am%C3%A1bile-silva-413597170/</a>
         </div>
         <br/>
       </address>
